No longer use Class#newInstance.